--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>My Amazing Library App</h1>
-<my-about></my-about>
-<my-collection></my-collection>
+<div class="container">
+  <mat-toolbar color="warn">
+    <span>{{title}}</span>
+    <span class="fill-remaining-space"></span>
+    <img src="assets/img/books-icon.png" class="center-block" style="max-height:100px" /> </mat-toolbar>
+  <app-tabs></app-tabs>
+</div>
