--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -16,12 +16,22 @@
       <h3 mat-line>
         <strong>{{book.title}}</strong>
       </h3>
+      <div>
+        <button mat-button (click)="openDialog(book.id)">
+          <i class="material-icons">pageview</i>
+          Dialog </button>
+        <button mat-button (click)="openRoute(book.id)">
+          <i class="material-icons"> pageview</i> Route </button>
+        <button mat-button (click)="delete(book)">
+          <i class="material-icons">delete_forever</i> Delete </button>
+      </div>
       <p mat-line>
-        <span>{{book.author}}</span>
-      </p>
-      <my-rating [rating]="book.rating" [book]="book" (ratingClicked)="onRatingUpdate($event)"> </my-rating>
-      <p mat-line>
-        <span [class]="book.isCheckedOut ? 'chip chip-danger' : 'chip chip-success'"> {{book.isCheckedOut ? 'Checked-Out' : 'Available'}} </span>
-      </p>
+        <p mat-line>
+          <span>{{book.author}}</span>
+        </p>
+        <my-rating [rating]="book.rating" [book]="book" (ratingClicked)="onRatingUpdate($event)"> </my-rating>
+        <p mat-line>
+          <span [class]="book.isCheckedOut ? 'chip chip-danger' : 'chip chip-success'"> {{book.isCheckedOut ? 'Checked-Out' : 'Available'}} </span>
+        </p>
     </mat-list-item>
   </mat-list>
