--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -35,3 +35,9 @@
         </p>
     </mat-list-item>
   </mat-list>
+
+  <div class="text-right add-btn">
+    <button mat-raised-button color="primary" (click)="addBook()">
+      <i class="material-icons">add_box</i> ADD BOOK</button>
+  </div>
+</div>
